sfdx-source/mutex/main/schema/objects/Mutex__c/Mutex__c.object-meta.xml
<CustomObject>
    <label>Mutex</label>
    <nameField>
        <displayFormat>MUTEX-{0000}</displayFormat>
        <label>Mutex Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Mutex</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>