sfdx-source/mutex/main/schema/objects/Mutex__c/fields/AsyncClassName__c.field-meta.xml
<CustomField>
    <fullName>AsyncClassName__c</fullName>
    <label>Async Class Name</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>