sfdx-source/mutex/main/schema/objects/Mutex__c/fields/JobStatus__c.field-meta.xml
<CustomField>
    <fullName>JobStatus__c</fullName>
    <label>Job Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>INACTIVE</fullName>
                <default>true</default>
                <label>Inactive</label>
            </value>
            <value>
                <fullName>ACTIVE</fullName>
                <label>Active</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>