sfdx-source/mutex/main/schema/objects/Mutex__c/fields/ParametersSerialized__c.field-meta.xml
<CustomField>
    <fullName>ParametersSerialized__c</fullName>
    <description>If the async process requires initialization parameters, then this field represents the serialized form of those parameters.</description>
    <inlineHelpText>If the async process requires initialization parameters, then this field represents the serialized form of those parameters.</inlineHelpText>
    <label>Parameters Serialized</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>